--- a/controlhub-site/src/App.css
+++ b/controlhub-site/src/App.css
@@ -1,8 +1,11 @@
+/* app.css */
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* Remove max-width: 1280px */
+  margin: 0;
+  padding: 0;
+  width: 100%; /* Make sure the root element takes full width */
+  height: 100%; /* Ensure it takes full height */
 }
 
 .logo {
@@ -48,4 +51,28 @@
 
 .app-icon {
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
+}
+
+img {
+  width: 256px;
+  height: auto;
+  border-radius: 20%;
+}
+
+h2 {
+  font-size: 2rem; /* Adjust the size */
+  font-weight: bold;
+  color: #fff; /* White text */
+  margin-bottom: 1rem; /* Add space below the heading */
+  text-align: center;
+}
+
+p{
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  img{
+    width: 128px;
+  }
 }
